RESOLVED FIXED299560
4 subtests in `pointerevent_after_target_appended.html?mouse` are failing
https://bugs.webkit.org/show_bug.cgi?id=299560
Summary 4 subtests in `pointerevent_after_target_appended.html?mouse` are failing
Lily Spiniolas
Reported 2025-09-25 15:06:26 PDT
The tests are failing due to a missing `pointerenter` and `mouseenter` event fired for the child after the child moves.
Attachments
Lily Spiniolas
Comment 1 2025-09-25 15:06:34 PDT
Lily Spiniolas
Comment 2 2025-09-25 15:15:11 PDT
EWS
Comment 3 2025-09-26 01:18:02 PDT
Committed 300564@main (dfc9d27f61ea): <https://commits.webkit.org/300564@main> Reviewed commits have been landed. Closing PR #51344 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.